Frontende de productos

--- a/SistemaFacturacionSRI.BlazorApp/Components/Pages/Facturacion.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/Pages/Facturacion.razor
@@ -225,7 +225,7 @@
                 ProductoId = prod.Id,
                 ProductoNombre = prod.Descripcion,
                 PrecioUnitario = prod.PrecioUnitario,
-                PorcentajeIVA = prod.PorcentajeIVA,
+               // PorcentajeIVA = prod.PorcentajeIVA,
                 Cantidad = 1
             });
         }
