--- a/SistemaFacturacionSRI.BlazorApp/Components/Pages/CrearProducto.razor
+++ b/SistemaFacturacionSRI.BlazorApp/Components/Pages/CrearProducto.razor
@@ -122,13 +122,7 @@
             <h5 class="mt-4">📊 Clasificación y Precios</h5>
 
             <div class="row">
-                <div class="col-md-4 mb-3">
-                    <label>Tipo de Producto</label>
-                    <InputSelect @bind-Value="productoDto.TipoProducto" class="form-select">
-                        <option value="Bien">Bien</option>
-                        <option value="Servicio">Servicio</option>
-                    </InputSelect>
-                </div>
+               
 
                 <div class="col-md-4 mb-3">
                     <label>Tarifa IVA (*)</label>
@@ -136,9 +130,9 @@
                         <option value="0">-- Seleccione --</option>
                         @if (tarifasIva != null)
                         {
-                            @foreach (var t in tarifasIva)
+                            @foreach (var t in tarifasIva.Where(t => t.Porcentaje == 0 || t.Porcentaje == 15))
                             {
-                                <option value="@t.Id">@t.Porcentaje.ToString("0.00")% (Código: @t.CodigoSRI)</option>
+                                <option value="@t.Id">@t.Porcentaje.ToString("0")% (Código: @t.CodigoSRI)</option>
                             }
                         }
                     </InputSelect>
